--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/GeekG1rl/poliwag#readme",
   "devDependencies": {
     "bower": "^1.8.2",
+    "copy-webpack-plugin": "^4.0.1",
     "webpack": "^3.6.0"
   }
 }
