--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bower": "^1.8.2",
     "copy-webpack-plugin": "^4.0.1",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "handlebars": "^4.0.10"
   }
 }
