--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
     "tests"
   ],
   "dependencies": {
-    "next-session-client": "^2.3.3",
-    "handlebars": "^4.0.10"
+    "next-session-client": "^2.3.3"
   }
 }
