--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
 	"content_scripts": [
 	  {
 		"matches": ["https://www.ft.com/*"],
-		"js": ["bundle.js"]
+		"js": ["bundle.js"],
+		"css": ["main.css"]
 	  }
 	]
   }
-  
