--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "bower": "^1.8.2",
     "copy-webpack-plugin": "^4.0.1",
+    "string-loader": "^0.0.1",
     "webpack": "^3.6.0"
   },
   "dependencies": {
